# ProjectSeedlings

./: README.md
rust/api/actix/openssl/: Cargo.toml
rust/api/actix/rustls/: Cargo.toml
rust/api/actix/rustls/certs/: cert.pem  generate.sh  key.pem
rust/api/actix/rustls/src/: main.rs
rust/api/actix/rustls/src/config/: ssl.rs
rust/api/actix/rustls/src/controller/: hello_controller.rs
rust/api/actix/rustls/src/doc/: openapi.rs
rust/api/actix/rustls/src/security/: mod.rs
rust/embedded/pi-pico/: Cargo.toml  setup.bat  setup.sh
rust/embedded/pi-pico/.cargo/: config.toml
rust/embedded/pi-pico/src/: main.rs
rust/security/: .gitignore  Cargo.toml
rust/security/scripts/: scan.sh  setup-scanner.sh
rust/security/src/: main.rs
